--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -71,7 +71,12 @@
           </mat-icon>
           <p mat-line> Transformer Script </p>
         </a>
-
+        <a mat-list-item [routerLink]="['/simulerScript']" routerLinkActive="active">
+          <mat-icon mat-list-icon>
+            Simuler Script
+          </mat-icon>
+          <p mat-line> Simuler Script </p>
+        </a>
         <a mat-list-item [routerLink]="['/dashboard']" routerLinkActive="active">
           <mat-icon mat-list-icon>
             dashboard
