--- a/src/app/script-transformer/script-transformer/script-transformer.component.html
+++ b/src/app/script-transformer/script-transformer/script-transformer.component.html
@@ -1,91 +1,110 @@
 <div class="example-input-wrapper" hidden>
     <label for="duration">Animation duration:</label>
-    <input id="duration" value="2000" type="number" min="0" step="100" #duration>
+    <input id="duration" value="1000" type="number" min="0" step="100" #duration>
 </div>
 
 <mat-vertical-stepper [linear]="false" #stepper [animationDuration]="duration.value">
-    <mat-step [stepControl]="firstFormGroup">
-        <form [formGroup]="firstFormGroup">
-            <ng-template matStepLabel>Paramétrer Base de données</ng-template>
-            <mat-form-field>
-                <input matInput placeholder="Nom Base de données" formControlName="nomBaseDeDonnées" required>
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="URL" formControlName="url" required>
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="PORT" formControlName="port" required>
-            </mat-form-field>
-            <div>
-                <button mat-button matStepperNext>Next</button>
-            </div>
-        </form>
-    </mat-step>
-        <mat-step [stepControl]="userFormGroup">
-            <form [formGroup]="userFormGroup">
-                <ng-template matStepLabel>Paramétrer utilisateurs</ng-template>
-                <mat-form-field>
-                    <input matInput placeholder="Nom Utilisateur Type 1" formControlName="utilisateurDS" required>
-                </mat-form-field>
-                <mat-form-field>
-                    <input matInput placeholder="Nom Utilisateur Type 2" formControlName="utilisateurHistory" required>
-                </mat-form-field>
-                <div>
-                    <button mat-button matStepperNext>Next</button>
+    <mat-step>
+        <form>
+            <ng-template matStepLabel>Informations de base de données</ng-template>
+            <form class="main" style="position: center">
+                <div class="row">
+                    <div class="col">
+                        <label  >Base de données</label>
+                        <input type="text" class="form-control" [(ngModel)] = "dbName"  name="dbName" placeholder="Base de données">
+                    </div>
+                    <div class="col">
+                        <label>Url</label>
+                        <input type="text" class="form-control"  placeholder="Url" [(ngModel)] = "url"  name="url" >
+                    </div>
+                    <div class="col">
+                        <label>Port</label>
+                        <input type="text" class="form-control"  placeholder="port" [(ngModel)] = "port"  name="port" >
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <label  >Utilisateur 1 </label>
+                        <input type="text" class="form-control"  [(ngModel)] = "user1"  name="user1" placeholder="Utilisateur 1">
+                    </div>
+                    <div class="col">
+                        <label>Role</label>
+                        <input type="text" class="form-control"  placeholder="Role utilisateur 1" [(ngModel)] = "user1_role"  name="user1_role" >
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <label  >Utilisateur 2 </label>
+                        <input type="text" class="form-control"  [(ngModel)] = "user2"  name="user2" placeholder="Utilisateur 2">
+                    </div>
+                    <div class="col">
+                        <label>Role</label>
+                        <input type="text" class="form-control"  placeholder="Role utilisateur 2" [(ngModel)] = "user2_role"  name="user2_role" >
+                    </div>
                 </div>
             </form>
-        </mat-step>
+            <div>
+                <button mat-button matStepperNext>Next</button>
+            </div>
+        </form>
+    </mat-step>
+    <mat-step >
+        <form>
+            <ng-template matStepLabel>Paramétrage fichier type 1 </ng-template>
+            <div class="row">
+                <div class="col">
+                    <label  >Nom fichier source </label>
+                    <input type="text" class="form-control" [(ngModel)] = "source_File_Name_User_1"  name="source_File_Name_User_1" placeholder="Nom fichier source 1">
+                </div>
+                <div class="col">
+                    <label>Regex fichier 00.sql</label>
+                    <input type="text" class="form-control"  placeholder="Regex fichier 00.sql" [(ngModel)] = "file0_regex_User_1"  name="file0_regex_User_1" >
+                </div>
+                <div class="col">
+                    <label>Regex fichier 01.sql</label>
+                    <input type="text" class="form-control"  placeholder="Regex fichier 01.sql" [(ngModel)] = "file1_regex_User_1"  name="file1_regex_User_1" >
+                </div>
 
-    <mat-step [stepControl]="thirdFormGroup">
-        <form [formGroup]="thirdFormGroup">
-            <ng-template matStepLabel>Paramétrer transformation utilisateur type 1</ng-template>
-            <mat-form-field>
-                <input matInput placeholder="Source 00.sql" formControlName="file0" required>
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="pattern0" formControlName="pattern0" required>
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="Source 01.sql" formControlName="file1" required>
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="pattern1" formControlName="pattern1" required>
-            </mat-form-field>
+            </div>
             <div>
                 <button mat-button matStepperPrevious>Back</button>
                 <button mat-button matStepperNext>Next</button>
             </div>
         </form>
     </mat-step>
-    <mat-step [stepControl]="forthFormGroup">
-        <form [formGroup]="forthFormGroup">
-            <ng-template matStepLabel>Paramétrer transformation utilisateur type 2</ng-template>
-            <mat-form-field>
-                <input matInput placeholder="Source 10.sql" formControlName="file0" required>
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="pattern1" formControlName="pattern1" required>
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="Source 11.sql" formControlName="file1" required>
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="pattern1" formControlName="pattern1" required>
-            </mat-form-field>
+    <mat-step >
+        <form>
+            <ng-template matStepLabel>Paramétrage fichier type 2 </ng-template>
+            <div class="row">
+                <div class="col">
+                    <label  >Nom fichier source </label>
+                    <input type="text" class="form-control" [(ngModel)] = "source_File_Name_User_2"  name="source_File_Name_User_2" placeholder="Nom fichier source 2">
+                </div>
+                <div class="col">
+                    <label>Regex fichier 10.sql</label>
+                    <input type="text" class="form-control"  placeholder="Regex fichier 10.sql" [(ngModel)] = "file0_regex_User_2"  name="file0_regex_User_2" >
+                </div>
+                <div class="col">
+                    <label>Regex fichier 11.sql</label>
+                    <input type="text" class="form-control"  placeholder="Regex fichier 11.sql" [(ngModel)] = "file1_regex_User_2"  name="file1_regex_User_2" >
+                </div>
+
+            </div>
             <div>
                 <button mat-button matStepperPrevious>Back</button>
                 <button mat-button matStepperNext>Next</button>
             </div>
         </form>
     </mat-step>
-
-
     <mat-step>
-        <ng-template matStepLabel>Done</ng-template>
-        You are now done.
+        <ng-template matStepLabel>Charger Scripts</ng-template>
+        Charger fichier .zip
         <div>
-            <button mat-button matStepperPrevious>Back</button>
-            <button mat-button (click)="stepper.reset()">Reset</button>
+            <input type="file" (change)="onFileSelected($event)" placeholder=".form-control-lg" accept=".zip .7z">
+            <button class="btn btn-danger" *ngIf="selectedFile!=undefined && selectedFile!= null" (click)="transformer()">Transformer Script</button>
+
         </div>
     </mat-step>
 </mat-vertical-stepper>
