--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -77,6 +77,12 @@
           </mat-icon>
           <p mat-line> Simuler Script </p>
         </a>
+        <a mat-list-item [routerLink]="['/historiqueSimulation']" routerLinkActive="active">
+          <mat-icon mat-list-icon>
+            Historique de simulation
+          </mat-icon>
+          <p mat-line> Historique de simulation</p>
+        </a>
         <a mat-list-item [routerLink]="['/dashboard']" routerLinkActive="active">
           <mat-icon mat-list-icon>
             dashboard
