--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -6,8 +6,7 @@
             <mat-card-content>
 
                 <mat-form-field class="full-width">
-                    <input id="emailInput" matInput placeholder="Email" formControlName="email" autocomplete="email"
-                        type="email">
+                        <input matInput placeholder="Email" formControlName="email" [type]="'email'">
 
                     <mat-error id="invalidEmailError" *ngIf="loginForm.controls['email'].hasError('email')">
                         Please enter a valid email address
@@ -35,8 +34,8 @@
             </mat-card-content>
 
             <mat-card-actions class="login-actions">
-                <button mat-raised-button id="login" color="primary" [disabled]="loginForm.invalid || loading"
-                    (click)="login()">Login</button>
+                <button mat-raised-button id="login" color="primary"
+                    (click)="authenticate()">Login</button>
                 <button mat-button id="resetPassword" (click)="resetPassword()" type="button">Reset Password</button>
             </mat-card-actions>
 
