--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -34,7 +34,7 @@
     <button mat-button [matMenuTriggerFor]="userMenu">
       <mat-icon>person</mat-icon>
       <span fxShow fxHide.xs>
-        Amani Chamakh
+      {{currentUserName}} | ({{role}})
       </span>
     </button>
     <mat-menu #userMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
@@ -59,64 +59,46 @@
       [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" class="sidenav">
 
       <mat-nav-list>
-        <a mat-list-item [routerLink]="['/earComparator']" routerLinkActive="active">
+        <a mat-list-item *ngIf="isRole('ChefDeProjet') || isRole('Developpeur')" [routerLink]="['/earComparator']" routerLinkActive="active">
           <mat-icon mat-list-icon>
             Comparer Ear
           </mat-icon>
           <p mat-line> Comparer Ear </p>
         </a>
-        <a mat-list-item [routerLink]="['/scriptTransformer']" routerLinkActive="active">
+        <a mat-list-item *ngIf="isRole('ChefDeProjet') || isRole('Developpeur')" [routerLink]="['/scriptTransformer']" routerLinkActive="active">
           <mat-icon mat-list-icon>
             Transformer Script
           </mat-icon>
           <p mat-line> Transformer Script </p>
         </a>
-        <a mat-list-item [routerLink]="['/simulerScript']" routerLinkActive="active">
+        <a mat-list-item *ngIf="isRole('ChefDeProjet') || isRole('Developpeur')" [routerLink]="['/simulerScript']" routerLinkActive="active">
           <mat-icon mat-list-icon>
             Simuler Script
           </mat-icon>
           <p mat-line> Simuler Script </p>
         </a>
-        <a mat-list-item [routerLink]="['/historiqueSimulation']" routerLinkActive="active">
+        <a mat-list-item *ngIf="isRole('ChefDeProjet') " [routerLink]="['/historiqueSimulation']" routerLinkActive="active">
           <mat-icon mat-list-icon>
             Historique de simulation
           </mat-icon>
           <p mat-line> Historique de simulation</p>
         </a>
-        <a mat-list-item [routerLink]="['/dashboard']" routerLinkActive="active">
-          <mat-icon mat-list-icon>
-            dashboard
-          </mat-icon>
-          <p mat-line> Dashboard </p>
-        </a>
-
-        <a mat-list-item [routerLink]="['/customers']" routerLinkActive="active">
-          <mat-icon mat-list-icon>
-            business
-          </mat-icon>
-          <p mat-line> Customers </p>
-        </a>
-        <a mat-list-item [routerLink]="['/users']" routerLinkActive="active">
+        <a mat-list-item *ngIf="isRole('AdminITVermeg')" [routerLink]="['/users']" routerLinkActive="active">
           <mat-icon mat-list-icon>
             people
           </mat-icon>
           <p mat-line> Users </p>
         </a>
-        <a mat-list-item [routerLink]="['/createUser']" routerLinkActive="active">
+        <a mat-list-item *ngIf="isRole('AdminITVermeg')"  [routerLink]="['/createUser']" routerLinkActive="active">
           <mat-icon mat-list-icon>
             people
           </mat-icon>
           <p mat-line>Create Users </p>
         </a>
 
-        <a mat-list-item [routerLink]="['/account/profile']">
-          <mat-icon mat-list-icon>person</mat-icon>
-          <p mat-line> Account </p>
-        </a>
-
         <a mat-list-item [routerLink]="['/auth/login']">
           <mat-icon mat-list-icon>exit_to_app</mat-icon>
-          <p mat-line> Log out </p>
+          <p mat-line> se déconnecter </p>
         </a>
       </mat-nav-list>
     </mat-sidenav>
